[package]
name = "dist-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
serde = {version="1.0", features = ["serde_derive", "derive"]}
serde_json = "1.0"
uuid = {version="1.3.1", features = ["v4"]}

[[bin]]
name = "echo"
path = "src/nodes/echo.rs" 

[[bin]]
name = "uuid"
path = "src/nodes/uuid.rs" 
